# exercises

./: .gitignore  timer
agda/: Monad.agda  SortedList.agda  Sublists.agda  Tabulate.agda  TypeChecker.agda  Universes.agda  Views.agda
algorithms/codeforces/: 1A - Theatre.hs
algorithms/codeforces/Round 110/: Code.hs  Trace.hs
algorithms/codeforces/VK Cup Qualify #1/: Commands.hs  NextRound.hs  Taxi.hs
algorithms/haskell/: Sortings.hs
algorithms/java/: compile-tests  run-tests
algorithms/java/algorithms/: ComparisonSortIface.java  Dijkstra.java  DistancesSearchIface.java  FloydWarshall.java  HeapSort.java  KnapsackProblem.java  MergeSort.java  QuickSort.java
algorithms/java/exceptions/: NoSuchElement.java
algorithms/java/structures/: BinaryTree.java  DoublePtrList.java  HashTable.java  ListIface.java  Pair.java  SinglePtrList.java  TreeIface.java
algorithms/lopatin/f - connect/: connect.c
algorithms/rosalind/: ini4.py  phre.py
algorithms/scala/: build.sbt
bioinformatics/rosalind/: dbpr.py  frmt.py  ini5.py  ini6.py  ptra.py  tfsq.py
btc-e/: History.hs  Main.hs  Secret.hs
coq/sf-pierce/: Binary.v  Induction-4-Stars.v  Induction-More.v  Induction.v  Lists-4-Stars.v  Logic-4-Stars.v  Logic-5-Stars.v  Logic.v  MoreCoq.v  MoreProp.v  Palindroms.v  Subsequences-New.v  Subsequences.v  Temp.v
erlang/db-1.0.0/ebin/: db.app  gendb.beam  main.beam  supdb.beam
erlang/db-1.0.0/src/: gendb.erl  main.erl  supdb.erl
erlang/myrpc-1.0.0/ebin/: client.beam  main.beam  myrpc.app  server.beam
erlang/myrpc-1.0.0/src/: client.erl  main.erl  server.erl
erlang/nonapps/timer/: t1mer.erl
erlang/quick/: quick.erl
erlang/store/: server.erl  show.sh  start.sh  stop.sh
fp-simuni/: timer
fp-simuni/2013-09-02/: GoldenRatio.hs  QuasiGoldenRatio.hs  SumSin.hs
functional/coq/sf-pierce/: Binary.v  MoreProp.v
functional/haskell/sortings/: Sortings.hs
functional/proof-assistants/agda/: Matrix.agda
functional/scala/account/: README.txt
functional/scala/traces/: README.md
genetic/: README.md
genetic/src/Genetic/: Atom.hs  Main.hs  Population.hs
genetic/src/Utils/: NumberDecomposition.hs
haskell/: timer
haskell/2013-09-02/: SumFact.hs
haskell/2013-09-05/: Decomposition.hs
haskell/2013-09-16/: CubeTable.hs  Height.hs  Isosceles.hs  MinHeight.hs
haskell/2013-09-23/: CoundOdd.hs
haskell/fp-simuni/2013-09-02/: NSeq.hs
haskell/fp-simuni/2013-09-05/: Goldbach.hs
haskell/fp-simuni/2013-09-10/: All.hs
haskell/fp-simuni/2013-09-13/: Integral.cpp
haskell/fp-simuni/2013-09-16/: MinHeight.hs  Parts.hs
haskell/sortings/: MergeVsStrand.hs  Permutations8.hs
lopatin/templates/: Main.hs  Templates.hs
memory/: avl-alloca.c
olympic/codeforces/: 1B - Tables.hs  Template.hs
projects/counter/: Common.hs  Counter.hs  Money.hs  Output.hs  Processor.hs  Scanner.hs  preprocess.sh  wrap.sh
projects/hreal/hreal-client/: hreal-client.cabal
projects/hreal/hreal-client/src/HReal/Client/: CLI.hs
projects/hreal/hreal-client/src/HReal/Client/GUI/: GUI.glade
projects/hreal/hreal-server/: hreal-server.cabal
projects/hreal/hreal-server/src/HReal/Server/: Main.hs
projects/hreal/temporary/01/: hreal.cabal
projects/hreal/temporary/01/src/: CommonConfig.hs  CommonIfaces.hs  DefaultConfig.hs  TestModuleImpl2.hs
projects/pranx/: App.hx  pranx-0.1.1.swf
projects/semantics/: Equivalence.agda
rosalind/: ini3.py  rvco.py
sandbox/rust/: Cargo.toml
sandbox/rust/microservice/: Cargo.toml
sandbox/rust/microservice/schemas/: messages.sql
sandbox/rust/microservice/src/: main.rs  models.rs
sandbox/webgl/: Cargo.toml
semantics/: Draft01.agda  Draft01.idr  Draft02.agda  Draft02.v  Draft03.agda  Equivalence.agda  Evaluation.agda  Example01.agda  NaturalSemantics.agda  StructuralSemantics.agda  Syntax.agda  todo
semantics/Drafts/: Draft01.pl  Draft02.v  Draft03.agda
semantics/TeX/: CourseWork.tex  Presentation.tex  build  clean  equivalence.tex  literature.bib  naturalinterp.tex  naturaltrans.tex
z/counter/: Common.hs  Money.hs  Output.hs  Processor.hs
z/hreal/hreal-common/: hreal-common.cabal
z/hreal/hreal-common/src/HReal/Core/: Graph.hs  Prelude.hs  Vertex.hs  World.hs
z/hreal/hreal-common/src/Test/: Main.hs
z/hreal/hreal-ifaces/: Setup.hs  hreal-ifaces.cabal
z/hreal/hreal-ifaces/src/HReal/Ifaces/: Vertex.hs
z/hreal/hreal-ifaces/thrift/: ifaces.thrift
z/htrader/: todo
(+164 files in other folders)
