[package]
name = "microservice"
version = "0.1.0"
authors = ["Kirill Taran <kirill.t256@gmail.com>"]

[dependencies]

maud = "0.17.3"

serde = "1.0"
serde_json = "1.0.22"
serde_derive = "1.0"

diesel = { version = "1.0.0", features = ["postgres"] }

env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.14"
log = "0.4.1"
url = "1.7.0"