Name:                hreal-common
Version:             0.1
Author:              Kirill Taran
Maintainer:          kirill.t256@gmail.com

Category:            Learning
Build-type:          Simple

Cabal-version:       >=1.2

Library
    hs-source-dirs: src
    exposed-modules: HReal.Config,
                     HReal.Core.Graph,
                     HReal.Core.World,
                     HReal.Core.Vertex,
                     HReal.Core.History,
                     HReal.Core.Prelude,
                     HReal.Language.Sugar
    build-depends: base >= 4.0,
                   network >= 2.3.0.5,
                   containers >= 0.4.0.0,
                   configurator >= 0.2
    ghc-options: -O -Wall
