Name:                hreal
Version:             0.0.1
Author:              Kirill Taran
Maintainer:          kirill.t256@gmail.com

Category:            Learning
Build-type:          Simple

Cabal-version:       >=1.2

Executable core
  Main-is: Core.hs
  Build-depends: base>=4.0
                 , plugins>=1.5 && <1.6
  
  hs-source-dirs: src
  Ghc-options: -O2 -Wall -Werror
  
Library
  hs-source-dirs: src
  exposed-modules: TestModuleImpl1, TestModuleImpl2
  Ghc-options: -O2 -Wall -Werror
